test/langtools/tools/javac/switchnull/SwitchNullDisabled.out
SwitchNullDisabled.java:9:18: compiler.err.switch.null.not.allowed
1 error
